--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hi, John"
+        android:text="Hi"
         android:textSize="22dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
